bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: '(' expected but identifier found.
while !fini 
      ^BDR:4: error: illegal start of simple expression
    var msg = litMessage:String;
    ^BDR:5: error: '(' expected but identifier found.
    if msg == "R"
       ^BDR:8: error: '(' expected but identifier found.
    if msg == "L"
       ^BDR:11: error: '(' expected but identifier found.
    if msg == "I"
       ^BDR:15: error: '(' expected but identifier found.
    if msg == "A"
       ^BDR:17: error: '(' expected but identifier found.
    if msg == "B"
       ^BDR:20: error: '(' expected but identifier found.
    if msg == "C"
       ^BDR:24: error: '(' expected but identifier found.
    if msg == "Z"
       ^BDR:26: error: '(' expected but identifier found.
    if msg == "X"
       ^BDR:30: error: '(' expected but identifier found.
    if msg == "Y"
       ^BDR:33: error: ';' expected but 'else' found.
    else 
    ^